[project]
name = "nhk2025-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aky", email = "akiyugata271@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
    "python-can>=4.5.0",
    "roslibpy>=1.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
